# voice-relay

./: .env.example  Dockerfile  admin-dashboard.html  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
qa/: voice-relay-smoke.yaml
src/client/: index.html
src/server/: __init__.py  admin.py  agents.py  auth.py  backend.py  database.py  main.py  models.py  stt.py  telnyx.py  text_utils.py  tts.py  vad.py
tests/: test_phase2_api.py  test_telnyx_adapter.py  test_websocket_protocol.py
widget/: package.json  tsconfig.json  vite.config.ts
widget/src/: VoiceRelay.tsx  index.ts  mount.ts  styles.css  types.ts
widget/src/hooks/: useAudioPlayback.ts  useAudioRecorder.ts  useVoiceRelay.ts
